Migrate build to Gradle (#924)